<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ConfigureActivity">

    <CheckBox android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/chkAll"
              app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp" android:text="@string/all"
              android:padding="15dp"
              app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
              app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>


    <CheckBox android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/chkImages" android:text="@string/images"
              android:padding="15dp"
              app:layout_constraintTop_toBottomOf="@id/chkAll" android:layout_marginTop="16dp"
              app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
              app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>


    <CheckBox android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/chkPdf" android:text="@string/pdf_files"
              android:padding="15dp"
              app:layout_constraintTop_toBottomOf="@id/chkImages" android:layout_marginTop="16dp"
              app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
              app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>


    <CheckBox android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/chkOther" android:text="@string/other_data"
              android:padding="15dp"
              app:layout_constraintTop_toBottomOf="@id/chkPdf" android:layout_marginTop="16dp"
              app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
              app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>


    <CheckBox android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/chkAudio" android:text="@string/audio"
              android:padding="15dp"
              app:layout_constraintTop_toBottomOf="@id/chkOther" android:layout_marginTop="16dp"
              app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
              app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>


    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/lblPath" android:text="@string/select_path"
              android:padding="15dp"
              app:layout_constraintTop_toBottomOf="@id/chkAudio" android:layout_marginTop="16dp"
              app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
              app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>


    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/btnFiles" android:text="@string/choose_path"
            android:padding="15dp" android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/lblPath" android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>


    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/btnConfig" android:text="@string/save_config_"
            android:padding="15dp" android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/btnFiles" android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>


</android.support.constraint.ConstraintLayout>